--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Vighneshwar's Portfolio</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
     <script src='main.js'></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +16,8 @@
         rel="stylesheet">
 
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <link rel="stylesheet" href="phone.css">
 </head>
 
 <body>
@@ -25,14 +25,14 @@
         <nav>
             <div class="left">Portfolio.</div>
             <div class="right">
-                <ul>
-                    <li> <a href="#section1">Home</a></li>
-                    <li> <a href="#section2">About</a></li>
-                    <li> <a href="#skills">Skills</a></li>
-                    <li><a href="#certificates">Certificates</a></li>
-                    <li> <a href="#projects">Projects </a></li>
-                    <li> <a href="#Contact">Contact </a></li>
-                </ul>
+                    <ul>
+                        <li > <a href="#section1">Home</a></li>
+                        <li > <a href="#section2">About</a></li>
+                        <li > <a href="#skills">Skills</a></li>
+                        <li > <a href="#certificates">Certificates</a></li>
+                        <li > <a href="#projects">Projects </a></li>
+                        <li > <a href="#Contact">Contact </a></li>
+                    </ul>
             </div>
         </nav>
     </header>
@@ -54,7 +54,8 @@
                     developed strong skills in Java, Python, HTML, CSS, SQL, and Data Structures and Algorithms. I have
                     earned a 5-star badge in Java from HackerRank and obtained certificates in the Basics of Python from
                     Infosys Springboard and Java(Basics) from HackerRank.
-                    My practical experience includes internships in DevOps at EduEngine ,Google AI&ML and Android Development,
+                    My practical experience includes internships in DevOps at EduEngine ,Google AI&ML and Android
+                    Development,
                     providing me with hands-on knowledge in these areas. I have completed several projects, such as a
                     Library Management System in C, a login page using Python's Tkinter module and MySQL, and a
                     portfolio website, showcasing my ability to apply theoretical knowledge to real-world problems.These
@@ -88,23 +89,30 @@
             <ul class="certi">
                 <li>
                     <button onclick="expand1()"><img src="javabasics.png" alt="">
-                        <div class="overlay"><p>Java Basics</p>
+                        <div class="overlay">
+                            <p>Java Basics</p>
 
                         </div>
                     </button>
                 </li>
                 <li><button onclick="expand2()"><img src="pythonbasics.png" alt="">
-                        <div class="overlay"><p>Python Basics</p></div>
+                        <div class="overlay">
+                            <p>Python Basics</p>
+                        </div>
                     </button></li>
             </ul>
         </div>
         <div class="row1">
             <ul class="certi">
                 <li><button onclick="expand3()"><img src="android.png" alt="">
-                        <div class="overlay"><p>Android devloper</p></div>
+                        <div class="overlay">
+                            <p>Android devloper</p>
+                        </div>
                     </button></li>
                 <li><button onclick="expand4()"><img src="aiml.png" alt="">
-                        <div class="overlay"><p>Google AIML</p></div>
+                        <div class="overlay">
+                            <p>Google AIML</p>
+                        </div>
                     </button></li>
             </ul>
         </div>
@@ -179,8 +187,6 @@
         strings: ['Software Engineer'],
         typeSpeed: 100,
         backspeed: 100,
-        backdelay: 1000,
-        loop: true
     });
     function resume() {
         window.location.href = "Resume.pdf";
